tests/Tuc/Fixtures/errors/UndefinedParticipantInDomain.tuc
tuc parse error test
participants
    ServiceNotInDomain parts
